# cmake-class

1. Variables/: CMakeLists.txt
2. Control Flow/: CMakeLists.txt
3. Functions/: CMakeLists.txt
4. Cache/: CMakeLists.txt
5. Targets/: CMakeLists.txt  lib.cpp
6. Targets2/: CMakeLists.txt  config.cmake
6. Targets2/MyExe/: CMakeLists.txt
6. Targets2/MyLib/: answer.cpp
6. Targets2/MyLoadLibrary/: CMakeLists.txt  question.cpp
8. Testing/: CMakeLists.txt
Cache/: CMakeLists.txt
Codegen/: CMakeLists.txt  config.h.in  main.cpp
Compile Flags/: CMakeLists.txt  config.cpp
Control Flow/: CMakeLists.txt
Crosscompiling/: CMakeLists.txt
Custom Targets/: CMakeLists.txt  fail.cpp
External Project/: CMakeLists.txt
Find Package/: CMakeLists.txt
Functions/: CMakeLists.txt
Generator Expressions/: CMakeLists.txt
Hello World/: CMakeLists.txt
Install/: CMakeLists.txt
Parse Arguments/: CMakeLists.txt
Targets/: CMakeLists.txt  exe.cpp  lib.h
Targets2/: CMakeLists.txt
Targets2/MyExe/: CMakeLists.txt  exe.cpp
Targets2/MyLib/: CMakeLists.txt  answer.cpp  answer.h  question.cpp  question.h
Testing/: factorial.cpp  tester.cpp
UseInstall/: CMakeLists.txt  main.cpp
Variables/: CMakeLists.txt
a. Codegen/: CMakeLists.txt  config.h.in
b. Custom Targets/: CMakeLists.txt  generator.cpp
b. Install/cmake/: MyFactorialConfig.cmake
b. Install/headers/: factorial.h
c. Custom Targets/: main.cpp
f. External Project/: CMakeLists.txt  gtest.cmake  main.cpp
g. Packaging/: CMakeLists.txt
